force-app/main/default/objects/Partner_Fund_ROI__c/Partner_Fund_ROI__c.object-meta.xml
<CustomObject>
    <label>MDF Result</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>MDF Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDF Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>