force-app/main/default/objects/Partner_Fund_ROI__c/fields/Channel_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Account Manager (CAM)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Partner_Fund_ROI</relationshipName>
    <type>Lookup</type>
</CustomField>