force-app/main/default/objects/Partner_Fund_ROI__c/fields/Current_Revenue_earned__c.field-meta.xml
<CustomField>
    <fullName>Current_Revenue_earned__c</fullName>
    <label>Current Revenue earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>