force-app/main/default/objects/Partner_Fund_ROI__c/fields/Fund_Claim__c.field-meta.xml
<CustomField>
    <fullName>Fund_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Claim</label>
    <referenceTo>SFDC_MDF_Claim__c</referenceTo>
    <relationshipName>Partner_Fund_ROI</relationshipName>
    <type>Lookup</type>
</CustomField>