force-app/main/default/objects/Partner_Fund_ROI__c/fields/Fund_Request__c.field-meta.xml
<CustomField>
    <fullName>Fund_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fund Request</label>
    <referenceTo>SFDC_MDF__c</referenceTo>
    <relationshipName>Partner_Fund_ROI</relationshipName>
    <type>Lookup</type>
</CustomField>