force-app/main/default/objects/Partner_Fund_ROI__c/fields/PartnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccountId__c</fullName>
    <formula>Fund_Claim__r.Account__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PartnerAccountId</label>
    <type>Text</type>
</CustomField>